src/snapshots/limitdeck__ui__tests__braille_trend_80x12.snap
---
source: src/ui.rs
expression: snapshot_text(&backend)
---
‹ Codex  Updated just now
  2 secondary limits shown · s Hide
  Codex · 7 days                 Quota ━━━━━━━━━━━━─────  68%  Resets in 1 hour
                                 Time  ─────────────────   1%
    Last 2 seconds  ⠑⠒⠒⠒⠒⠒⠒⠒⠤⠤⠤⠤⣀⣀⣀⣀  71% → 68% · −3%
  GPT-5.3-Codex-Spark · 5 hours  Quota ━━━━━━━━─────────  49%  Resets in 1 hour
                                 Time  ━━━━━━━──────────  40%
    Last 2 seconds  ⠑⠒⠒⠒⠤⠤⠤⠤⣀⣀⣀⣀⣀⣀⣀⣀  52% → 49% · −3%
  GPT-5.3-Codex-Spark · 7 days   Quota ━━━━━────────────  31%  Resets in 1 hour
                                 Time  ─────────────────   1%
    Last 2 seconds  ⠡⠤⠤⠤⠤⠤⠤⠤⣀⣀⣀⣀⣀⣀⣀⣀  33% → 31% · −2%
  Esc Back · m View · r Refresh · ? Help · q Quit
