src/snapshots/limitdeck__ui__tests__chinese_detail_80x12.snap
---
source: src/ui.rs
expression: snapshot_text(&backend)
---
‹ Codex  刚 刚 更 新
  已 显 示  2 个 次 要 限 额  · s 隐 藏
  Codex · 7 天                   配 额  ━━━━━━━━━━━━━━──────  68%  1 小 时 后 重 置
                                时 间  ────────────────────   1%
    近  2 秒   ⠑⠒⠒⠒⠒⠒⠒⠒⠤⠤⠤⠤⣀⣀⣀⣀  71% → 68% · −3%
  GPT-5.3-Codex-Spark · 5 小 时   配 额  ━━━━━━━━━━──────────  49%  1 小 时 后 重 置
                                时 间  ━━━━━━━━────────────  40%
    近  2 秒   ⠑⠒⠒⠒⠤⠤⠤⠤⣀⣀⣀⣀⣀⣀⣀⣀  52% → 49% · −3%
  GPT-5.3-Codex-Spark · 7 天     配 额  ━━━━━━──────────────  31%  1 小 时 后 重 置
                                时 间  ────────────────────   1%
    近  2 秒   ⠡⠤⠤⠤⠤⠤⠤⠤⣀⣀⣀⣀⣀⣀⣀⣀  33% → 31% · −2%
  Esc 返 回  · d 发 现  · m 视 图  · r 刷 新  · ? 帮 助  · q 退 出
