src/snapshots/limitdeck__ui__tests__chinese_detail_80x8.snap
---
source: src/ui.rs
expression: snapshot_text(&backend)
---
‹ Codex  刚 刚 更 新
  Codex · 7 天                   配 额  ━━━━──  68% 时 间  ──────   1%  1 小 时 后 重 置
    近  2 秒   ⠑⠒⠒⠒⠒⠒⠒⠒⠤⠤⠤⠤⣀⣀⣀⣀  71% → 68% · −3%
  GPT-5.3-Codex-Spark · 5 小 时   配 额  ━━━───  49% 时 间  ━━────  40%  1 小 时 后 重 置
    近  2 秒   ⠑⠒⠒⠒⠤⠤⠤⠤⣀⣀⣀⣀⣀⣀⣀⣀  52% → 49% · −3%
  GPT-5.3-Codex-Spark · 7 天     配 额  ━━────  31% 时 间  ──────   1%  1 小 时 后 重 置
    近  2 秒   ⠡⠤⠤⠤⠤⠤⠤⠤⣀⣀⣀⣀⣀⣀⣀⣀  33% → 31% · −2%
  Esc 返 回  · r 刷 新  · t Rainbow · l 中 文  · q 退 出
