src/snapshots/limitdeck__ui__tests__narrow_list_40x5.snap
---
source: src/ui.rs
expression: snapshot_text(&backend)
---
› Codex    Codex      7d ━━━━━━━───  71%
           Spark      5h ━━━━━─────  52%
           Spark      7d ━━━───────  33%
  Claude    5h ━━━───  63% 7d ━━━━──  82
  ↑↓/jk Select · Enter Details · r Refre
