src/snapshots/limitdeck__ui__tests__narrow_list_40x6.snap
---
source: src/ui.rs
expression: snapshot_text(&backend)
---
› Codex      7d Q ━━━━━━──  71%
             7d T ────────   1%
  2 secondary limits hidden · s Show
  Claude     5h Q ━─  63%  7d Q ━━  82%
             5h T ━─  40%  7d T ──   1%
  ↑↓/jk Select · Enter Details · r Refre
